--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "babel-preset-react": "^6.5.0",
     "bluebird": "^3.3.5",
     "copy-webpack-plugin": "^3.0.0",
+    "cross-env": "^5.2.0",
     "crypto-browserify": "^3.11.1",
     "css-loader": "^0.23.1",
+    "eslint-plugin-babel": "^5.1.0",
     "ethereum-input-data-decoder": "0.0.3",
     "etherscan-api": "^3.0.11",
     "event-emitter": "^0.3.4",
